tests/typing/error/type_error_simple.st
def test : N2 := 1
