tests/typing/error/type_error_simple.out
tests/typing/error/type_error_simple.st:1:12
1 | def test : N2 := 1
               ^^
Error: Type 'N2' no exists.
